// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeOdd fails when given an odd number 1`] = `
"expect(received).not.toBeOdd()

Expected value to not be odd received:
  1"
`;

exports[`.toBeOdd fails when given not given an odd number 1`] = `
"expect(received).toBeOdd()

Expected value to be odd received:
  false"
`;

exports[`.toBeOdd fails when given not given an odd number 2`] = `
"expect(received).toBeOdd()

Expected value to be odd received:
  true"
`;

exports[`.toBeOdd fails when given not given an odd number 3`] = `
"expect(received).toBeOdd()

Expected value to be odd received:
  \\"\\""
`;

exports[`.toBeOdd fails when given not given an odd number 4`] = `
"expect(received).toBeOdd()

Expected value to be odd received:
  2"
`;

exports[`.toBeOdd fails when given not given an odd number 5`] = `
"expect(received).toBeOdd()

Expected value to be odd received:
  {}"
`;

exports[`.toBeOdd fails when given not given an odd number 6`] = `
"expect(received).toBeOdd()

Expected value to be odd received:
  [Function anonymous]"
`;

exports[`.toBeOdd fails when given not given an odd number 7`] = `
"expect(received).toBeOdd()

Expected value to be odd received:
  undefined"
`;

exports[`.toBeOdd fails when given not given an odd number 8`] = `
"expect(received).toBeOdd()

Expected value to be odd received:
  null"
`;

exports[`.toBeOdd fails when given not given an odd number 9`] = `
"expect(received).toBeOdd()

Expected value to be odd received:
  NaN"
`;
